--- a/Main.html
+++ b/Main.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Entendiendo Git</title>
+    <link rel="stylesheet" href="./main.css">
   </head>
   <body>
     <h1>Git mi primeros Pasos</h1>
@@ -16,5 +17,13 @@
     <b>Comandos : [git push]</b>
     <p>Estado de cada paso <span>Remote</span></p>
     <img src="./img/git-flow.png" alt="" width="900px" height="500px">
+
+    <ul>
+      <li>elemento 1</li>
+      <li>elemento 2</li>
+      <li>elemento 3</li>
+      <li>elemento 4</li>
+      <li>elemento 5</li>
+    </ul>
   </body>
 </html>
