--- a/Main.html
+++ b/Main.html
@@ -15,6 +15,18 @@
     <p>Estado de cada paso <span>Commited</span></p>
     <b>Comandos : [git push]</b>
     <p>Estado de cada paso <span>Remote</span></p>
+
+
+    <p>Escrito desde la ram Html</p>
+
+    <ol>
+      <li>elemento 1</li>
+      <li>elemento 2</li>
+      <li>elemento 3</li>
+      <li>elemento 4</li>
+      <li>elemento 5</li>
+    </ol>
     <img src="./img/git-flow.png" alt="" width="900px" height="500px">
+    <script src="./main.js"></script>
   </body>
 </html>
