--- a/Main.html
+++ b/Main.html
@@ -27,6 +27,14 @@
       <li>elemento 4</li>
       <li>elemento 5</li>
     </ul>
+
+    <ol>
+      <li>Primavera - 21 marzo</li>
+      <li>Verano - 21 junio</li>
+      <li>Otono 21- septiembre</li>
+      <li>Invierno - 21 Diciembre</li>
+      <li>Caloroso</li>
+    </ol>
     <script src="./main.js"></script>
   </body>
 </html>
