--- a/Main.html
+++ b/Main.html
@@ -27,6 +27,14 @@
       <li>elemento 4</li>
       <li>elemento 5</li>
     </ul>
+
+    <ol>
+      <li>Primavera</li>
+      <li>Verano</li>
+      <li>Otono</li>
+      <li>Invierno</li>
+      <li>Caloroso</li>
+    </ol>
     <script src="./main.js"></script>
   </body>
 </html>
