--- a/Main.html
+++ b/Main.html
@@ -35,6 +35,12 @@
       <li>Invierno - 21 Diciembre</li>
       <li>Caloroso</li>
     </ol>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod inventore neque iusto iure consequatur harum placeat quaerat. Sequi eos id, atque non quidem suscipit labore est at et, blanditiis quo.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae ut maiores voluptatem, ullam dolores nam esse laboriosam! Dolore sunt sint numquam voluptatum placeat optio repellendus. Ipsa consequatur porro nostrum et.
+    </p>
     <script src="./main.js"></script>
   </body>
 </html>
