Haciendo un gh para el curso

--- a/Main.html
+++ b/Main.html
@@ -16,7 +16,9 @@
     <p>Estado de cada paso <span>Commited</span></p>
     <b>Comandos : [git push]</b>
     <p>Estado de cada paso <span>Remote</span></p>
-    <img src="./img/git-flow.png" alt="" width="900px" height="500px">
+
+    <p>Quieres dominar el uso de git mira este enlance  <a href="https://jonmircha.com/git" style="color: wheat;">Jhon mircha </a></p>
+    <img src="git-flow.png" alt="flujo de git" width="900px" height="500px">
 
     <p>Escrito desde la ram Html</p>
       
